avoid Skia xor crash with not-yet-drawn surface (tdf#132335)

No content yet, nothing to xor with.

Change-Id: I68b44d6051859a61d50c5fbf8e3c63e719a87ca3